--- a/test/Makefile
+++ b/test/Makefile
@@ -2,6 +2,8 @@ fun_test: fun_test.cpp
 	g++ -I E:\CODE\Git\Paper\cppjieba\include -o fun_test fun_test.cpp ../fun.cpp
 #error_test: error_test.cpp
 #	g++ -I E:\CODE\Git\Paper\cppjieba\include -o error_test error_test.cpp ../fun.cpp
+main_test: main_test.cpp
+	g++ -o main_test main_test.cpp
 .PHONY:clean
 clean:
 	rm -rf *.exe
